--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <a href="#accordionMenu">سر فصل ها</a>
                             </li>
                             <li>
-                                <a href="#">تیم منتورینگ</a>
+                                <a href="#mentoring">تیم منتورینگ</a>
                             </li>
                         </ul>
                     </div>
@@ -284,7 +284,7 @@
                        </div>
                      </div>
                      <!-- slider -->
-                      <div>
+                      <div id="mentoring">
                         <h3 class="title-slider">چه کسانی شما را همراهی میکنند؟</h3>
                         <div class="wrapper swiper">
                              <ul class="carousel swiper-wrapper">
