--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </div>
                     <!-- Bootcamp program -->
                     <div class="bot-program" id="bot-prpgrams">
-                        <h3>برنامه کلی بوتکمپ در یک نگاه</h3>
+                        <h3>برنامه کلی <span style="color: var(--global-color);">بوتکمپ</span> در یک نگاه</h3>
                         <div class="bot-program-boxs">
                             <div class="bot-program-box">
                                 <img src="./src/images/html-5.svg" />
@@ -333,6 +333,104 @@
                               <img class="carousel-arrow-left swiper-button-next" src="./src/images/slider-arrow-right.svg" alt="slider-arrow-right">
                             <div class="swiper-pagination"></div>
                         </div>
+                      </div>
+                     <!-- Traded quotations -->
+                      <!-- <div class="fot-quotations">
+                        <div class="title-quotaions">
+                            <img src="./src/images/quotations-icon.png" alt="quotations">
+                            <h2>سوالات متداول</h2>
+                        </div>
+                        <div class="quotations-accordion">
+                            <ul>
+                                <li>
+                                    <div class="toggle-btn">
+                                        <p>
+                                            <img src="./src/images/message-question.svg" alt="message-question">
+                                            تفاوت بوتکمپ و دوره ها
+                                        </p>
+                                        <span> <img class="toggle-arrow" src="./src/images/arrow-down (1).svg" alt="arrow-down"></span>
+
+                                    </div>
+                                    <p>
+                                        در بوت‌کمپ علاوه بر دسترسی کامل به دوره ها، یک برنامه گام به گام را هم دریافت می کنید که باید طبق آن دوره ها را پیش ببرید و در این مسیر هم تیم منتورینگ کنار شماست. علاوه بر این ها، پروژه ها و تسک های مختلفی‌ برای شما تعریف میشود که باید انجام دهید و در نهایت کدهایتان بررسی میشود. جلسات آنلاین کا شامل کدنویسی، پروژه زدن، رفع اشکال و ... هم وجود دارند.
+                                    </p>
+                                </li>
+
+                                <li>
+                                    <div class="toggle-btn">
+                                        <p>
+                                            <img src="./src/images/message-question.svg" alt="message-question">
+                                            محتوای آموزشی بوت کمپ چیست؟
+                                        </p>
+                                        <span> <img class="toggle-arrow" src="./src/images/arrow-down (1).svg" alt="arrow-down"></span>
+
+                                    </div>
+                                    <p>
+                                        در این بوت‌کمپ از محتوای دوره های سایت استفاده میشود و عملا تمام دوره های فرانت در اختیارتون خواهد بود تا طبق برنامه ریزی پیش ببرید.                                    </p>
+                                </li>
+
+                                <li>
+                                    <div class="toggle-btn">
+                                        <p>
+                                            <img src="./src/images/message-question.svg" alt="message-question">
+                                            شرکت در بوت کمپ پیش نیازی دارد؟
+                                        </p>
+                                        <span> <img class="toggle-arrow" src="./src/images/arrow-down (1).svg" alt="arrow-down"></span>
+
+                                    </div>
+                                    <p>
+                                        تمام افراد میتوانند در این بوت‌کمپ شرکت کنند، چرا که تمام آموزش ها از صفر تا پیشرفته است و هیچ محدودیت سنی و یا پیشنیازی ندارد                                    </p>
+                                </li>
+
+                                <li>
+                                    <div class="toggle-btn">
+                                        <p>
+                                            <img src="./src/images/message-question.svg" alt="message-question">
+                                            من قبلا یادگیری را شروع کرده ام،برایم مناسب است؟
+                                        </p>
+                                        <span> <img class="toggle-arrow" src="./src/images/arrow-down (1).svg" alt="arrow-down"></span>
+
+                                    </div>
+                                    <p>
+                                        بله، در این بوت‌کمپ تجربه ها و پروژه های واقعی را خواهیم داشت و همچنین شرایط استخدام و همکاری که برای هر کسی میتواند مفید باشد.                                    </p>
+                                </li>
+
+                               
+                                
+                            </ul>
+                        </div>
+                      </div> -->
+                      <div class="fot-accordion">
+                        <div class="fot-accordion-item">
+                          <button class="accordion-header"> تفاوت بوتکمپ و دوره ها <span class="icon"> <img  src="./src/images/arrow-down (1).svg" alt="arrow-down"></span></button>
+                          <div class="accordion-content">
+                            <p>
+                                در بوت‌کمپ علاوه بر دسترسی کامل به دوره ها، یک برنامه گام به گام را هم دریافت می کنید که باید طبق آن دوره ها را پیش ببرید و در این مسیر هم تیم منتورینگ کنار شماست. علاوه بر این ها، پروژه ها و تسک های مختلفی‌ برای شما تعریف میشود که باید انجام دهید و در نهایت کدهایتان بررسی میشود. جلسات آنلاین کا شامل کدنویسی، پروژه زدن، رفع اشکال و ... هم وجود دارند.
+                            </p>
+                          </div>
+                        </div>
+                        <div class="fot-accordion-item">
+                          <button class="accordion-header"> محتوای آموزشی بوت کمپ چیست؟  <span class="icon"> <img  src="./src/images/arrow-down (1).svg" alt="arrow-down"></span></button>
+                          <div class="accordion-content">
+                            <p>                                        در این بوت‌کمپ از محتوای دوره های سایت استفاده میشود و عملا تمام دوره های فرانت در اختیارتون خواهد بود تا طبق برنامه ریزی پیش ببرید.                                    </p>
+                        </p>
+                          </div>
+                        </div>
+                        <div class="fot-accordion-item">
+                          <button class="accordion-header">  شرکت در بوت کمپ پیش نیازی دارد؟  <span class="icon"> <img  src="./src/images/arrow-down (1).svg" alt="arrow-down"></span></button>
+                          <div class="accordion-content">
+                            <p>                                        تمام افراد میتوانند در این بوت‌کمپ شرکت کنند، چرا که تمام آموزش ها از صفر تا پیشرفته است و هیچ محدودیت سنی و یا پیشنیازی ندارد                                    
+                        </p>
+                          </div>
+                        </div>
+                        <div class="fot-accordion-item">
+                            <button class="accordion-header">  من قبلا یادگیری را شروع کرده ام،برایم مناسب است؟ <span class="icon"> <img  src="./src/images/arrow-down (1).svg" alt="arrow-down"></span></button>
+                            <div class="accordion-content">
+                              <p>     
+                                     بله، در این بوت‌کمپ تجربه ها و پروژه های واقعی را خواهیم داشت و همچنین شرایط استخدام و همکاری که برای هر کسی میتواند مفید باشد.                                
+                              </p>
+                            </div>
+                          </div>
                       </div>
                 </section>
                 <!-- content-Registration -->
